Minor fix
Scrollbar looks better.
Text selection is visible

--- a/Assets/CSS/root.css
+++ b/Assets/CSS/root.css
@@ -14,7 +14,7 @@
 }
 
 ::selection {
-    background-color: var(--scrollbar-thumb-hover);
+    background-color: var(--overlay);
 }
 
 ::-webkit-scrollbar {
